objects/PermissionSetAssignment_Home__dll.object
<CustomObject>
    <fields>
        <fullName>AssigneeId__c</fullName>
        <label>Assignee ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expires On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>PermissionSetAssignment ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <label>Is Active</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRevoked__c</fullName>
        <label>Is Revoked</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSetGroupId__c</fullName>
        <label>PermissionSetGroup ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSetId__c</fullName>
        <label>PermissionSet ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>Date Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>